# alina

./: Cargo.toml  README.md
src/: args.rs  lib.rs  main.rs
src/commands/: code.rs  config.rs  mod.rs  test.rs
src/commands/note/: mod.rs
src/commands/util/: base64.rs  mod.rs  string.rs  types.rs
src/lib/: config.rs  consts.rs  mod.rs  util.rs
src/lib/config/: editor.rs  mod.rs
src/lib/ops/: mod.rs
