[package]
name = "alina"
version = "0.1.0"
edition = "2021"

[lib]
name = "alina"
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
clap = { version = "4.0.25", features = ["derive"] }
clipboard = "0.5.0"
dirs = "4.0.0"
ferris_print = "0.1.0"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
chrono = "0.4.19"
colored = "2.0.0"
dialoguer = "0.10.2"